--add: possible fix text selection on mobile

--- a/client/style.css
+++ b/client/style.css
@@ -64,6 +64,8 @@ button {
     padding: 16px;
     text-transform: uppercase;
     font-size: 1.3rem;
+    -webkit-user-select: none;
+    user-select: none;
 }
 
 .bottom-wrapper input {
